--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,8 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
+  
+  frontend:
+    build: frontend
+    ports:
+      - 3000:3000
