Fix: Finish CRUD, Indent, and Services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,24 @@
 version: "3.9"
 
 services:
+
+  db:
+    container_name: db
+    image: postgres:14
+    ports:
+      - 5431:5432
+    env_file:
+      - ./backend/.env
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
+  
   backend:
     container_name: api
-    build: backend
+    build: ./backend
     ports:
       - 8080:8080
     env_file:
@@ -11,24 +26,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
-
-  db:
-    container_name: db
-    image: postgres:14
-    ports:
-      - 5433:5432
-    environment:
-      - POSTGRES_USER=kenzie
-      - POSTGRES_PASSWORD=kenzie1234
-      - POSTGRES_DB=kenzie_db
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U kenzie -d kenzie_db"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 5s
   
   frontend:
-    build: frontend
+    build: ./frontend
     ports:
       - 3000:3000
